refactor the Exception handling methods