@@ -12,6 +12,7 @@ import com.pei.pharmatest.entities.Drug;
 import com.pei.pharmatest.entities.Patient;
 import com.pei.pharmatest.entities.Pharmacy;
 import com.pei.pharmatest.entities.PharmacyDrug;
+import com.pei.pharmatest.exceptions.BusinessException;
 import com.pei.pharmatest.exceptions.ResourceNotFoundException;
 import com.pei.pharmatest.repositories.PatientRepository;
 import com.pei.pharmatest.repositories.PharmacyRepository;
@@ -20,6 +21,7 @@ import com.pei.pharmatest.services.impl.PharmacyServiceImpl;
 import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -44,12 +46,6 @@ class PrescriptionServiceTest {
   private PharmacyServiceImpl pharmacyService;
 
   private Pharmacy pharmacy;
-  private Drug drug1;
-  private Drug drug2;
-  private Drug drug3;
-  private PharmacyDrug pharmacyDrug1;
-  private PharmacyDrug pharmacyDrug2;
-  private PharmacyDrug pharmacyDrug3;
   private Patient patient;
 
   @BeforeEach
@@ -59,32 +55,32 @@ class PrescriptionServiceTest {
     pharmacy.setId(1L);
     pharmacy.setName("Test Pharmacy");
 
-    drug1 = new Drug();
+    Drug drug1 = new Drug();
     drug1.setId(1L);
     drug1.setName("Drug A");
     drug1.setStock(100);
 
-    drug2 = new Drug();
+    Drug drug2 = new Drug();
     drug2.setId(2L);
     drug2.setName("Drug B");
     drug2.setStock(50);
 
-    drug3 = new Drug();
+    Drug drug3 = new Drug();
     drug3.setId(3L);
     drug3.setName("Drug C");
     drug3.setStock(50);
 
-    pharmacyDrug1 = new PharmacyDrug();
+    PharmacyDrug pharmacyDrug1 = new PharmacyDrug();
     pharmacyDrug1.setPharmacy(pharmacy);
     pharmacyDrug1.setDrug(drug1);
     pharmacyDrug1.setAllocatedAmount(80);
 
-    pharmacyDrug2 = new PharmacyDrug();
+    PharmacyDrug pharmacyDrug2 = new PharmacyDrug();
     pharmacyDrug2.setPharmacy(pharmacy);
     pharmacyDrug2.setDrug(drug2);
     pharmacyDrug2.setAllocatedAmount(40);
 
-    pharmacyDrug3 = new PharmacyDrug();
+    PharmacyDrug pharmacyDrug3 = new PharmacyDrug();
     pharmacyDrug3.setPharmacy(pharmacy);
     pharmacyDrug3.setDrug(drug3);
     pharmacyDrug3.setAllocatedAmount(60);
@@ -108,8 +104,9 @@ class PrescriptionServiceTest {
     PrescriptionDrugRequest drugRequest1 = new PrescriptionDrugRequest();
     drugRequest1.setDrugId(1L);
     drugRequest1.setQuantity(50);
+    drugRequest1.setDosage("500ml");
 
-    request.setDrugs(Arrays.asList(drugRequest1));
+    request.setDrugs(List.of(drugRequest1));
 
     when(pharmacyRepository.findById(1L)).thenReturn(Optional.of(pharmacy));
     when(patientRepository.findById(1L)).thenReturn(Optional.of(patient));
@@ -130,6 +127,12 @@ class PrescriptionServiceTest {
   void createPrescription_WhenPharmacyNotFound_ShouldThrowException() {
     // Given
     PrescriptionRequest request = new PrescriptionRequest();
+    PrescriptionDrugRequest drugRequest1 = new PrescriptionDrugRequest();
+    drugRequest1.setDrugId(1L);
+    drugRequest1.setQuantity(50);
+    drugRequest1.setDosage("500ml");
+    request.setPatientId(1L);
+    request.setDrugs(List.of(drugRequest1));
     when(pharmacyRepository.findById(1L)).thenReturn(Optional.empty());
 
     // When/Then
@@ -142,7 +145,12 @@ class PrescriptionServiceTest {
   void createPrescription_WhenPatientNotFound_ShouldThrowException() {
     // Given
     PrescriptionRequest request = new PrescriptionRequest();
+    PrescriptionDrugRequest drugRequest1 = new PrescriptionDrugRequest();
+    drugRequest1.setDrugId(1L);
+    drugRequest1.setQuantity(50);
+    drugRequest1.setDosage("500ml");
     request.setPatientId(999L);
+    request.setDrugs(List.of(drugRequest1));
 
     when(pharmacyRepository.findById(1L)).thenReturn(Optional.of(pharmacy));
     when(patientRepository.findById(999L)).thenReturn(Optional.empty());
@@ -162,15 +170,16 @@ class PrescriptionServiceTest {
     PrescriptionDrugRequest drugRequest = new PrescriptionDrugRequest();
     drugRequest.setDrugId(4L); // Non-contracted drug
     drugRequest.setQuantity(10);
+    drugRequest.setDosage("500ml");
 
-    request.setDrugs(Arrays.asList(drugRequest));
+    request.setDrugs(List.of(drugRequest));
 
     when(pharmacyRepository.findById(1L)).thenReturn(Optional.of(pharmacy));
     when(patientRepository.findById(1L)).thenReturn(Optional.of(patient));
 
     // When/Then
     assertThatThrownBy(() -> pharmacyService.createPrescription(1L, request))
-        .isInstanceOf(IllegalArgumentException.class)
+        .isInstanceOf(BusinessException.class)
         .hasMessage("Drug with ID 4 is not contracted with this pharmacy");
   }
 
@@ -183,15 +192,16 @@ class PrescriptionServiceTest {
     PrescriptionDrugRequest drugRequest = new PrescriptionDrugRequest();
     drugRequest.setDrugId(1L);
     drugRequest.setQuantity(90); // Exceeds allocation of 80
+    drugRequest.setDosage("500ml");
 
-    request.setDrugs(Arrays.asList(drugRequest));
+    request.setDrugs(List.of(drugRequest));
 
     when(pharmacyRepository.findById(1L)).thenReturn(Optional.of(pharmacy));
     when(patientRepository.findById(1L)).thenReturn(Optional.of(patient));
 
     // When/Then
     assertThatThrownBy(() -> pharmacyService.createPrescription(1L, request))
-        .isInstanceOf(IllegalArgumentException.class)
+        .isInstanceOf(BusinessException.class)
         .hasMessage("Requested quantity exceeds pharmacy's allocation for drug: Drug A");
   }
 
@@ -204,15 +214,16 @@ class PrescriptionServiceTest {
     PrescriptionDrugRequest drugRequest = new PrescriptionDrugRequest();
     drugRequest.setDrugId(3L);
     drugRequest.setQuantity(55); // Exceeds stock of 50 for drug3, which not exceeds allocation
+    drugRequest.setDosage("500ml");
 
-    request.setDrugs(Arrays.asList(drugRequest));
+    request.setDrugs(List.of(drugRequest));
 
     when(pharmacyRepository.findById(1L)).thenReturn(Optional.of(pharmacy));
     when(patientRepository.findById(1L)).thenReturn(Optional.of(patient));
 
     // When/Then
     assertThatThrownBy(() -> pharmacyService.createPrescription(1L, request))
-        .isInstanceOf(IllegalArgumentException.class)
+        .isInstanceOf(BusinessException.class)
         .hasMessage("Requested quantity exceeds available stock for drug: Drug C");
   }
 }
